--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 		</ul>
 	</main>
 		<footer class="footer">
-		<button class="button-floppy type="button" onclick="window['dialog-floppy'].showModal()"aria-controls="dialog-floppy">
+		<button class="button-floppy" type="button" onclick="window['dialog-floppy'].showModal()" aria-controls="dialog-floppy">
 			<svg class="floppy-icon">
 				<use href="./svg/floppy.svg#floppy"></use>
 			</svg>
@@ -322,7 +322,7 @@
 				<p class="dialog-text">Вставьте
 					дискету, чтобы продолжить</p>
 				</form>
-		<button type="submit" onclick="window['dialog-floppy'].close()"class="dialog-button ">ок</button>
+		<button type="button" onclick="window['dialog-floppy'].close()" class="dialog-button">ок</button>
 	</dialog>
     <script src="./scripts/like.js"></script>
   </body>
