третья сдача(prettier)

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
                 />
               </picture>
             </div>
-            <div class="article__text-section-list article__text-section-list_paddings">
+            <div
+              class="article__text-section-list article__text-section-list_paddings"
+            >
               <p class="list-text">
                 Это было самое начало пути. На этом этапе важно было
                 проникнуться основами и настроиться на учёбу. И, возможно,
